# qt-league-spectator

./: CMakeLists.txt  conanfile.py  worlds2021.json
.github/workflows/: ci.yml
cmake/: windeployqt.cmake
src/: CMakeLists.txt  main.cpp  rasterwindow.cpp  rasterwindow.h
src/installer/: installer.iss.in
src/model/: playerspectator.cpp  playerspectator.hpp
src/persistance/: player.hpp  playerdatabase.cpp  playerdatabase.hpp
src/view/: controller.qml  display.qml  view.qrc
src/viewmodel/: data.cpp  data.hpp  players.cpp  players.hpp  window.cpp  window.hpp
